final flow proper redirection left

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/plate-fork-and-knife-icon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Explore Our Wide Range of Product Categories at RNT Marg Shreemaya Restaurant - Shreemaya - Store Pickup | Shop All Your Favorites </title>
   </head>
   <body class="dark:bg-gray-900">
     <div id="root"></div>
